# HCAHPS-Rating-Predictor

./: .gitignore  Analysis.md  App.py  Model1.py  Model2.py  Model3.py  README.md  hospital_rating_dnn_feature_extractor.h5  hospital_rating_hybrid_xgb.pkl  hospital_rating_model.pkl  hospital_rating_model_cnn.h5  pyproject.toml  requirements.txt  scaler.pkl  scaler_cnn.pkl  scaler_dnn.pkl  selected_features_cnn.pkl  selected_features_dnn.pkl
Models/: hospital_rating_model_cnn.keras
Scalars/: scaler_enhanced.pkl  selected_features.pkl
