[project]
name = "some"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask==2024.5.1",
    "imbalanced-learn==0.12.3",
    "joblib==1.4.2",
    "keras>=3.9.2",
    "lightgbm>=4.6.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "tensorflow>=2.18.1",
    "xgboost==2.0.3",
]
